--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -15,6 +15,17 @@ title = {{Interpretable machine learning for psychological research: Opportuniti
 year = {2023}
 }
 
+@article{StemyEye19,
+  title={Tree-based methods for regression and classification-Statistical methods at the interface of graphics and statistics},
+  author={Stemmier, Mark and von Eye, Alexander},
+  journal={Psychological Test and Assessment Modeling},
+  volume={61},
+  number={4},
+  pages={363--364},
+  year={2019},
+  publisher={PABST Science Publishers}
+}
+
 @Article{BrysyStev18,
   author    = {Brysbaert, Marc and Stevens, Micha{\"e}l},
   journal   = {Journal of Cognition},
@@ -88,8 +99,63 @@ address={New York, NY}
   year={2020}
 }
 
+@article{StemyHein19,
+  title={Analyzing tree structures with configural frequency analysis and the R-package confreq},
+  author={Stemmier, Mark and Heine, J{\"o}rg-Henrik and Wallner, Susanne},
+  journal={Psychological Test and Assessment Modeling},
+  volume={61},
+  number={4},
+  pages={419--433},
+  year={2019},
+  publisher={PABST Science Publishers}
+}
+
+@article{ChunyAnso21,
+  title={Identifying treatment moderators of a trauma-informed parenting intervention with children in foster care: Using model-based recursive partitioning},
+  author={Chung, Gerard and Ansong, David and Brevard, Kanisha C and Chen, Ding-Geng},
+  journal={Child Abuse \& Neglect},
+  volume={117},
+  pages={105065},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{DingyZhao19,
+  title={Using tree-based regression to examine factors related to math ability among 15-year old students},
+  author={Ding, Cody and Zhao, Yuyang},
+  journal={Psychological Test and Assessment Modeling},
+  volume={61},
+  number={4},
+  pages={453--470},
+  year={2019},
+  publisher={PABST Science Publishers}
+}
+
+@article{FrityHaup19,
+  title={Regression trees and random forests as alternatives to classical regression modeling: Investigating the risk factors for corporal punishment},
+  author={Fritsch, Markus and Haupt, Harry and L{\"o}sel, Friedrich and Stemmler, Mark},
+  journal={Psychological Test and Assessment Modeling},
+  volume={61},
+  number={4},
+  pages={389--417},
+  year={2019},
+  publisher={PABST Science Publishers}
+}
+
+
+@article{HospyHosp11,
+  title={Potential bias in predictive validity of universal screening measures across disaggregation subgroups},
+  author={Hosp, John L and Hosp, Michelle A and Dol, Janice K},
+  journal={School Psychology Review},
+  volume={40},
+  number={1},
+  pages={108--131},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
 @book{DunnyDunn81,
-  title={Peabody picture vocabulary test-revised},
+  title={{Peabody Picture Vocabulary Test-Revised}},
   author={Dunn, Lloyd M and Dunn, Leota M},
   year={1981},
 address={Circle Pines, MN},
@@ -98,7 +164,7 @@ address={Circle Pines, MN},
 
 
 @manual{NLSY, 
-author={Bureau of Labor Statistics, U.S. Department of Labor},
+author={{Bureau of Labor Statistics, U.S. Department of Labor}},
 title={{National Longitudinal Survey of Youth 1979 cohort, 1979-2016 (rounds 1-27)}},
 address={Columbus, OH},
 year={2019}
@@ -137,11 +203,11 @@ address={Thousand Oaks, CA}
 }
 
 
-@article{FokkyZeil23,
+@article{FokkyZeil24,
   title={Subgroup detection in linear growth curve models with generalized linear mixed model {(GLMM)} trees},
   author={Fokkema, Marjolein and Zeileis, Achim},
-  journal={arXiv preprint arXiv:2309.05862},
-  year={2023}
+  journal={Behavior Research Methods},
+  year={in press}
 }
 
 @article{WiedyFrick21,
